--- a/main.html
+++ b/main.html
@@ -11,6 +11,10 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<p id="status">Enter the Metaverse</p>
+
+	<button id="enterBtn">Enter</button>
+
 </body>
 
 </html>
