--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<p id="status">Enter the Metaverse</p>
+	<p id="status">Entered the Metaverse</p>
 
 	<button id="enterBtn">Enter</button>
 
